[package]
name = "launch-ff14"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sixtyfps = "0.1"
surf = "2.3"
async-std = {version = "1.10", features = ["attributes"]}
regex = "1.5"
tempfile = "3.2"
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
checksums = "0.9"

[build-dependencies]
winres = "0.1"
